core/errors/src/main/java/com/example/errors/MyClass.kt
package com.example.errors

class MyClass {
}